--- a/Read.html
+++ b/Read.html
@@ -198,10 +198,8 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Shanju Notes&raquo;</strong>
                           </h3>
@@ -216,7 +214,7 @@
                             The book was published in Taiwan in August 1995, and the mainland edition was published by
                             Wenhui Publishing House in September 1998.
                           </p>
-                          <br>
+                          <br><br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
                             class="btn btn-secondary btn-rounded btn-md"><i class="fa fa-book" aria-hidden="true"></i>
                             Learn More</a>
@@ -224,10 +222,10 @@
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Autumn Remembrance&raquo; </strong>
                           </h3>
@@ -253,8 +251,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;See Off&raquo;</strong>
                           </h3>
@@ -288,13 +286,11 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Ordinary World&raquo;</strong>
-                          </h3>
+                          </h3><br>
                           <h6 class="purple-text">
                             <strong> Lu Yao (China)</strong>
                           </h6>
@@ -308,7 +304,7 @@
                             labor and love, frustration and pursuit , Pain and joy, daily life and huge social conflicts
                             are intertwined, profoundly showing the difficult and tortuous road that ordinary people
                             have traversed in the historical process of the great age.
-                            <br>
+                            <br><br>
                           </p>
                           <br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
@@ -318,10 +314,10 @@
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;A Hundred Years of Solitude&raquo; </strong>
                           </h3>
@@ -350,8 +346,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;A Million Pounds&raquo;</strong>
                           </h3>
@@ -383,13 +379,11 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Invest in people&raquo;</strong>
-                          </h3>
+                          </h3><br>
                           <h6 class="purple-text">
                             <strong> Theodore Schultz (American)</strong>
                           </h6>
@@ -400,9 +394,7 @@
                             education economics, and human time value economics; the last three chapters are about the
                             author’s American education, scientific research, and international Attacks on the chaos and
                             distortions of aid agencies.
-                            <br>
                           </p>
-                          <br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
                             class="btn btn-secondary btn-rounded btn-md"><i class="fa fa-book" aria-hidden="true"></i>
                             Learn More</a>
@@ -410,10 +402,10 @@
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Capital Accumulation Theory&raquo; </strong>
                           </h3>
@@ -437,8 +429,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Political Economy Past and Present&raquo;</strong>
                           </h3>
@@ -466,10 +458,8 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;On War&raquo;</strong>
                           </h3>
@@ -493,10 +483,10 @@
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Science of Winning&raquo; </strong>
                           </h3>
@@ -512,7 +502,7 @@
                             formulation of the first, second and third levels of Suvolo in July 1942. Order of the
                             military medal of the husband. Together with the name of its author, "Science of Victory"
                             has received widespread attention from military theorists around the world.
-                          </p>
+                          </p><br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
                             class="btn btn-secondary btn-rounded btn-md"><i class="fa fa-book" aria-hidden="true"></i>
                             Learn More</a>
@@ -522,8 +512,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;On Protracted War&raquo;</strong>
                           </h3>
@@ -553,10 +543,8 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Why Unfair Trials? Western Trial History&raquo;</strong>
                           </h3>
@@ -569,17 +557,17 @@
                             trial system has gone through. Reaching the current height will enable readers to gain moral
                             and political insights, and to better understand today's unstable times.
                           </p>
-                          <br><br><br><br>
+                          <br><br><br><br><br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
                             class="btn btn-secondary btn-rounded btn-md"><i class="fa fa-book" aria-hidden="true"></i>
                             Learn More</a>
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Sweeping the Fallen Leaves for the Winter&raquo; </strong>
                           </h3>
@@ -604,8 +592,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Looking for the Imprint of Law&raquo;</strong>
                           </h3>
@@ -635,10 +623,8 @@
                       <!--Grid row-->
                       <div class="row">
 
-                        <div class="col-xl-1 col-lg-2"></div>
-
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Way of life&raquo;</strong>
                           </h3>
@@ -660,10 +646,10 @@
                         </div>
                         <!--Grid column-->
 
-                        <div class="col-xl-2 col-lg-2"></div>
+                        <div class="col-md-2"></div>
 
                         <!--Grid column-->
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-5">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;Cells&raquo; </strong>
                           </h3>
@@ -676,7 +662,7 @@
                             technology. Using vivid intentions and sharp metaphors, he successfully sublimated the
                             subject in a poetic and respectful way.
                           </p>
-                          <br><br><br><br>
+                          <br><br><br><br><br>
                           <a href="https://mdbootstrap.com/snippets/jquery/marta-szymanska/1317891" target="_blank"
                             class="btn btn-secondary btn-rounded btn-md"><i class="fa fa-book" aria-hidden="true"></i>
                             Learn More</a>
@@ -686,8 +672,8 @@
                       <br>
                       <!--Grid row-->
                       <div class="row">
-                        <div class="col-xl-4 col-lg-3"></div>
-                        <div class="col-xl-4 col-lg-6">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
                           <h3 class="py-3 font-weight-bold">
                             <strong>&laquo;White Robe&raquo;</strong>
                           </h3>
